--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url(/images/lpBackground.png);
+  background-image: url(../images/lpBackground.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
